--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/db_201512057?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/db_b_201512057?serverTimezone=UTC
 spring.datasource.username=b_201512057
 spring.datasource.password=b_201512057
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
